src/components/common/ChainIndicator/styles.module.css
.indicator {
  display: flex;
  align-items: center;
  justify-content: center;
  min-width: 70px;
  font-size: 12px;
}

.inlineIndicator {
  display: inline-block;
  min-width: 70px;
  font-size: 11px;
  line-height: normal;
  text-align: center;
  border-radius: 4px;
  padding: 4px 8px;
}

.withLogo {
  display: flex;
  align-items: center;
  gap: var(--space-1);
  padding: 0;
  font-size: 14px;
}

@media (max-width: 899.95px) {
  .responsive .name {
    display: none;
  }
.indicator {
  min-width: 35px;
}
}

